# ecosystem-sim

./: .gitignore  Cargo.toml
crates/ecosystem-ai-runtime/: Cargo.toml
crates/ecosystem-ai-shared/: Cargo.toml
crates/ecosystem-ai-training/: Cargo.toml
crates/ecosystem-app/: Cargo.toml
crates/ecosystem-components/: Cargo.toml  README.md
crates/ecosystem-components/src/: lib.rs
crates/ecosystem-components/src/components/: markers.rs  mod.rs  physical.rs
crates/ecosystem-components/src/components/behavioral/: ai_inputs.rs  ai_outputs.rs  constraints.rs  mod.rs  tracking.rs
crates/ecosystem-components/src/organisms/: mod.rs  organism_type.rs
crates/ecosystem-physics/: Cargo.toml
crates/ecosystem-rendering/: Cargo.toml
