[workspace]
resolver = "3"
members = [
  "crates/ecosystem-components",
  "crates/ecosystem-physics",
  "crates/ecosystem-ai-shared",
  "crates/ecosystem-ai-training",
  "crates/ecosystem-ai-runtime",
  "crates/ecosystem-rendering",
  "crates/ecosystem-app",
]

# Shared dependencies across workspace
[workspace.dependencies]
# Bevy ecosystem (selective imports for lean compilation)
bevy = "0.12.1"
bevy_ecs = "0.12.1"
bevy_math = "0.12.1"
bevy_time = "0.12.1"
bevy_utils = "0.12.1"
bevy_app = "0.12.1"

# Burn ML framework (no optional here - handle in individual crates)
burn = "0.11"
burn-ndarray = "0.11"
burn-wgpu = "0.11"

# CLI tools
clap = "4.0"
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# Data processing
csv = "1.3"
serde_json = "1.0"

# Utilities
rand = "0.8"
serde = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = "1.0"

# Database (for future use - not optional in workspace)
surrealdb = "1.0"

# Performance profiles
[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1

# ML training profile
[profile.training]
inherits = "release"
debug = true
